@@ -864,6 +864,11 @@
         name = "Miguel Zapico (elricz)"
     [/entry]
     [entry]
+    	name = "Pablo J. Urbano Santos (Lord Ork)"
+	wikiuser = "Lord Ork"
+	email = "asqueados_AT_gmail.com"
+    [/entry]
+    [entry]
         name = "Paul Smedley (Creeping)"
     [/entry]
     [entry]
